--- a/terms.html
+++ b/terms.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="banner__text">
-                        <h1>Felhasználási feltételek</h1>
+                        <h1>Terms And Conditions</h1>
                     </div>
                 </div>
             </div>
@@ -59,8 +59,9 @@
     <section class="terms_conditons">
         <div class="container">
             <div class="content-wrap">
-                <h3>Felhasználási feltételek</h3>
-                <p>Utolsó frissítés: 2024. augusztus 01</p>
+                <h3>Interpretation and Definitions
+                </h3>
+                <p>Interpretation</p>
                 <p>Kérjük, hogy Szolgáltatásunk használata előtt figyelmesen olvassa el ezeket a feltételeket.</p>
                 <h3>Értelmezés és definíciók</h3>
                 <p><b>Értelmezés</b></p>
