--- a/index.html
+++ b/index.html
@@ -82,8 +82,58 @@
         </div>
     </div>
     <!-- below section end -->
-    
-    
+
+    <!-- associated section start -->
+    <div class="associated">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="flex_box auto">
+                        <div class="flex_cont"><a href="">
+                                <h3>Shows
+                                </h3>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="flex_box carjet">
+                        <div class="flex_cont">
+                            <a href="">
+                                <h3>Exhibitions</h3>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="flex_box europar">
+                        <div class="flex_cont"><a href="">
+                                <h3>Hotels</h3>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="flex_box norge">
+                        <div class="flex_cont">
+                            <a href="">
+                                <h3>Sports</h3>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="flex_box enterprise">
+                        <div class="flex_cont"><a href="">
+                                <h3>Tours</h3>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- associated section end -->
     <!-- accordian start -->
     <div class="hotel_accordian">
         <div class="container">
