--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box auto">
+                    <div class="flex_box Shows">
                         <div class="flex_cont"><a href="">
                                 <h3>Shows
                                 </h3>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box carjet">
+                    <div class="flex_box Exhi">
                         <div class="flex_cont">
                             <a href="">
                                 <h3>Exhibitions</h3>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box europar">
+                    <div class="flex_box Hotel">
                         <div class="flex_cont"><a href="">
                                 <h3>Hotels</h3>
                             </a>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box norge">
+                    <div class="flex_box Sport">
                         <div class="flex_cont">
                             <a href="">
                                 <h3>Sports</h3>
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box enterprise">
+                    <div class="flex_box Tour">
                         <div class="flex_cont"><a href="">
                                 <h3>Tours</h3>
                             </a>
