--- a/index.html
+++ b/index.html
@@ -134,6 +134,30 @@
         </div>
     </div>
     <!-- associated section end -->
+    <!-- events section start -->
+    <div class="events">
+        <div class="container">
+            <div class="event_box">
+                <div class="col-12">
+                    <h2>Featured Events</h2>
+                </div>
+                <div class="row event_inner">
+                    <div class="col-lg-6 img">
+                        <img src="" alt="">
+                    </div>
+                    <div class="col-lg-6 img">
+                        <h3>Experience The Thrill Of The Race</h3>
+                        <span>Macau Grand Prix</span>
+                        <p>One of the most famous motorsport events in Asia,featuring Formula 3 and touring car races.
+                            The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality and
+                            entertainment.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- events section end -->
     <!-- accordian start -->
     <div class="hotel_accordian">
         <div class="container">
