--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </div>
                     <div class="col-lg-6 img">
                         <h3>Experience The Thrill Of The Race</h3>
-                        <span>Macau Grand Prix</span>
+                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"><span>Macau Grand Prix</span></a>
                         <p>One of the most famous motorsport events in Asia,featuring Formula 3 and touring car races.
                             The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality and
                             entertainment.
