--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
                 <div class="row event_inner">
                     <div class="col-lg-6 img">
-                        <img src="" alt="">
+                        <img src="img/carrace.jpg" alt="">
                     </div>
                     <div class="col-lg-6 img">
                         <h3>Experience The Thrill Of The Race</h3>
