--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="col-lg-6 img">
                         <img src="img/carrace.jpg" alt="">
                     </div>
-                    <div class="col-lg-6 img">
+                    <div class="col-lg-6 text">
                         <h3>Experience The Thrill Of The Race</h3>
                         <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"><span>Macau Grand Prix</span></a>
                         <p>One of the most famous motorsport events in Asia,featuring Formula 3 and touring car races.
