--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <h2>Featured Events</h2>
                 </div>
                 <div class="row event_inner">
-                    <div class="col-lg-6 img">
+                    <div class="col-lg-6 even">
                         <img src="img/carrace.jpg" alt="">
                     </div>
                     <div class="col-lg-6 text">
