--- a/index.html
+++ b/index.html
@@ -154,6 +154,32 @@
                         </p>
                     </div>
                 </div>
+                <div class="row event_inner">
+                    <div class="col-lg-5 even">
+                        <img src="img/carrace.jpg" alt="">
+                    </div>
+                    <div class="col-lg-7 text">
+                        <h3>Explore The Magic Of China</h3>
+                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"><span>Taipa Village</span></a>
+                        <p>One of the most famous motorsport events in Asia,featuring Formula 3 and touring car races.
+                            The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality and
+                            entertainment.
+                        </p>
+                    </div>
+                </div>
+                <div class="row event_inner">
+                    <div class="col-lg-5 even">
+                        <img src="img/carrace.jpg" alt="">
+                    </div>
+                    <div class="col-lg-7 text">
+                        <h3>Experience The Thrill Of The Race</h3>
+                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"><span>Macau Grand Prix</span></a>
+                        <p>One of the most famous motorsport events in Asia,featuring Formula 3 and touring car races.
+                            The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality and
+                            entertainment.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
