--- a/index.html
+++ b/index.html
@@ -161,9 +161,13 @@
                     <div class="col-lg-7 text">
                         <h3>Explore The Magic Of China</h3>
                         <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"><span>Taipa Village</span></a>
-                        <p>One of the most famous motorsport events in Asia,featuring Formula 3 and touring car races.
-                            The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality and
-                            entertainment.
+                        <p>A cultural and historical area
+                            with traditional Portuguese
+                            architecture, local shops,
+                            and eateries. It’s a great
+                            place to explore Macau’s
+                            heritage and sample local
+                            cuisine.
                         </p>
                     </div>
                 </div>
