--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     </div>
                     <div class="col-lg-7 text">
                         <h3>Explore The Magic Of China</h3>
-                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"><span>Taipa Village</span></a>
+                        <a href="https://www.china-roads.com/travel/macao/village-taipa/"><span>Taipa Village</span></a>
                         <p>A cultural and historical area
                             with traditional Portuguese
                             architecture, local shops,
@@ -176,11 +176,15 @@
                         <img src="img/carrace.jpg" alt="">
                     </div>
                     <div class="col-lg-7 text">
-                        <h3>Experience The Thrill Of The Race</h3>
-                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"><span>Macau Grand Prix</span></a>
-                        <p>One of the most famous motorsport events in Asia,featuring Formula 3 and touring car races.
-                            The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality and
-                            entertainment.
+                        <h3>Marvel At The Wonder Of Art</h3>
+                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"><span>“Legends of Chivalry” Art
+                                Exhibition</span></a>
+                        <p>MGM joins forces with
+                            renowned contemporary
+                            Chinese artist Ren Zhe to
+                            present art exhibition
+                            echoing the theme of
+                            “Legends of Chivalry”,
                         </p>
                     </div>
                 </div>
