--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col-lg-7 text">
                         <h3>Marvel At The Wonder Of Art</h3>
-                        <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"><span>“Legends of Chivalry” Art
+                        <a href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition"><span>“Legends of Chivalry” Art
                                 Exhibition</span></a>
                         <p>MGM joins forces with
                             renowned contemporary
