--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     </footer>
     <!-- footer end-->
     <!-- cookies start -->
-    <div class="card cookie-alert show">
+    <!-- <div class="card cookie-alert show">
         <div class="card-body p-5">
 
             <p class="card-text">"Pozor! 🍪 Súbory cookie používame na zlepšenie zážitku z prehliadania našej
@@ -323,7 +323,7 @@
                 <a href="#" class="btn btn-primary accept-cookies">súhlasiť</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- cookies end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="javascript/bootstrap.js"></script>
