--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
                 <div class="row event_inner">
                     <div class="col-lg-5 even">
-                        <img src="img/carrace.jpg" alt="">
+                        <img src="img/carrace.jpg" alt="macau">
                     </div>
                     <div class="col-lg-7 text">
                         <h3>Experience The Thrill Of The Race</h3>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="row event_inner">
                     <div class="col-lg-5 even">
-                        <img src="img/carrace.jpg" alt="">
+                        <img src="img/temple.jpg" alt="macau">
                     </div>
                     <div class="col-lg-7 text">
                         <h3>Explore The Magic Of China</h3>
