--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
                 <div class="row event_inner">
                     <div class="col-lg-5 even">
-                        <img src="img/carrace.jpg" alt="">
+                        <img src="img/armor.jpg" alt="macau">
                     </div>
                     <div class="col-lg-7 text">
                         <h3>Marvel At The Wonder Of Art</h3>
