--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
                     </div>
                     <div class="col-lg-7 text">
                         <h3>Marvel At The Wonder Of Art</h3>
-                        <a href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition"><span>“Legends of Chivalry” Art
+                        <a
+                            href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition"><span>“Legends
+                                of Chivalry” Art
                                 Exhibition</span></a>
                         <p>MGM joins forces with
                             renowned contemporary
@@ -192,6 +194,19 @@
         </div>
     </div>
     <!-- events section end -->
+    <section class="newsletter">
+        <div class="container">
+            <div class="newsletter-wrap">
+                <div class="newsletter-heading">
+                    <h4>Iratkozzon fel hírlevelünkre, hogy naprakész legyen!</h4>
+                </div>
+                <div class="news-form">
+                    <input type="email" placeholder="Συμπληρώστε το email σας">
+                    <button>Regisztrálj</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- accordian start -->
     <div class="hotel_accordian">
         <div class="container">
