--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
         <div class="container">
             <div class="newsletter-wrap">
                 <div class="newsletter-heading">
-                    <h4>Iratkozzon fel hírlevelünkre, hogy naprakész legyen!</h4>
+                    <h4>Sign Up For Our Newsletter To Stay Up To Date With All Things Macau!</h4>
                 </div>
                 <div class="news-form">
-                    <input type="email" placeholder="Συμπληρώστε το email σας">
-                    <button>Regisztrálj</button>
+                    <input type="email" placeholder="Fill in your email">
+                    <button>Sign Up</button>
                 </div>
             </div>
         </div>
