--- a/index.html
+++ b/index.html
@@ -207,6 +207,33 @@
             </div>
         </div>
     </section>
+    <!-- about us section start -->
+    <div class="detail">
+        <div class="container">
+            <div class="row mb-2 d-flex align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_img">
+                        <img src="image/asideimg.jpg" alt="hotel">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="detail_box">
+                        <p>Olemme suomalaisia mennä opas vierailemaan Las Vegas Casino Resorts.
+                            Asiantuntijamme käyttävät useita eri mittareita arvioidakseen ja vertaillakseen parhaita
+                            kasinohotelleja Las Vegasissa.
+                        </p>
+                        <br>
+                        <p>Näimme aukon markkinoilla ja huomasimme, että Las Vegas Casino Resortsissa vieraileville
+                            suomalaisille ei ollut neuvoja. Joten tiimimme, joka on käsitellyt Las Vegasin matkustamista
+                            vuosia, päätti, että oli vain reilua, että suomalaisilla oli mahdollisuus tutustua Vegasin
+                            suosituimpiin kasinolomakohteisiin.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- about us section end -->
     <!-- accordian start -->
     <div class="hotel_accordian">
         <div class="container">
