--- a/index.html
+++ b/index.html
@@ -218,15 +218,17 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_box">
-                        <p>Olemme suomalaisia mennä opas vierailemaan Las Vegas Casino Resorts.
-                            Asiantuntijamme käyttävät useita eri mittareita arvioidakseen ja vertaillakseen parhaita
-                            kasinohotelleja Las Vegasissa.
+                        <p>At TicketsMacau, we are dedicated to bringing you the best of Macau's dynamic
+                            entertainment scene. Our mission is to connect you with a diverse range of events hosted at
+                            the city’s premier casino hotels and entertainment venues. Whether you're interested in
+                            high-stakes poker tournaments, mesmerizing theatrical shows, or electrifying concerts, we
+                            offer up-to-date information and easy access to tickets for a variety of experiences.
                         </p>
                         <br>
-                        <p>Näimme aukon markkinoilla ja huomasimme, että Las Vegas Casino Resortsissa vieraileville
-                            suomalaisille ei ollut neuvoja. Joten tiimimme, joka on käsitellyt Las Vegasin matkustamista
-                            vuosia, päätti, että oli vain reilua, että suomalaisilla oli mahdollisuus tutustua Vegasin
-                            suosituimpiin kasinolomakohteisiin.
+                        <p>Our team
+                            is passionate about showcasing Macau’s vibrant cultural and entertainment offerings,
+                            ensuring you never miss out on the excitement. Discover, plan, and enjoy unforgettable
+                            moments with TicketsMacau as your trusted guide.
                         </p>
                     </div>
                 </div>
