--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="row mb-2 d-flex align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="detail_img">
-                        <img src="image/asideimg.jpg" alt="hotel">
+                        <img src="img/aboutus.jpg" alt="macau">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
