--- a/index.html
+++ b/index.html
@@ -236,68 +236,26 @@
         </div>
     </div>
     <!-- about us section end -->
-    <!-- accordian start -->
-    <div class="hotel_accordian">
+    <!-- below section start -->
+    <div class="below">
         <div class="container">
-            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                <h2 class="mb-4">Cestovateľské tipy na Slovensko</h2>
-                <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="headingOne">
-                        <h4 class="panel-title">
-                            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
-                                aria-expanded="false" aria-controls="collapseOne">
-                                Ako sa ľudia pohybujú?
-                            </a>
-                        </h4>
-                    </div>
-                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
-                        aria-labelledby="headingOne">
-                        <div class="panel-body">
-                            Slovensko má spoľahlivý a cenovo dostupný systém verejnej dopravy vrátane vlakov
-                            a autobusov. Zvážte použitie vlakov na dlhšie cesty medzi mestami a autobusov na
-                            kratšie cesty a vidiecke oblasti.
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="headingTwo">
-                        <h4 class="panel-title">
-                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                                href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                What foods do you recommend?
-                            </a>
-                        </h4>
-                    </div>
-                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                        <div class="panel-body">
-                            Sample traditional Slovak cuisine, such as bryndzové halušky (potato dumplings with
-                            sheep cheese), kapustnica (cabbage soup), and štrúdl (strudel).
-
-                        </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="headingThree">
-                        <h4 class="panel-title">
-                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                                href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Čo robiť na Slovensku
-                            </a>
-                        </h4>
-                    </div>
-                    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
-                        aria-labelledby="headingThree">
-                        <div class="panel-body">
-                            Preskúmajte fascinujúcu históriu Slovenska návštevou stredovekých miest ako
-                            Banská Štiavnica, Bardejov a Levoča, ktoré sú zapísané na zozname svetového
-                            dedičstva UNESCO. Absolvujte prehliadky so sprievodcom, aby ste sa dozvedeli o
-                            minulosti Slovenska vrátane jeho hradov, zámkov a historických pamiatok.</div>
-                    </div>
+            <div class="row">
+                <div class="col-12">
+                    <p>The information provided on TicketsMacau is intended for general informational purposes only.
+                        While we strive to ensure the
+                        accuracy and timeliness of the event details, schedules, and ticket availability listed on our
+                        site, we cannot guarantee that all
+                        information is complete or error-free. Events are subject to change or cancellation, and ticket
+                        availability may vary. We
+                        recommend verifying event details directly with the event organizers or venues before making any
+                        plans or purchases.
+                        TicketsMacau is not responsible for any discrepancies or issues arising from the use of the
+                        information on this site.</p>
                 </div>
             </div>
         </div>
     </div>
-    <!-- accordian end -->
+    <!-- below section end -->
     <!--footer start-->
     <footer class="footer_section">
         <div class="container">
