--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </div>
     <!-- below section end -->
     <!--footer start-->
-    <footer class="footer_section">
+    <!-- <footer class="footer_section">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -310,7 +310,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-- footer end-->
     <!-- cookies start -->
     <!-- <div class="card cookie-alert show">
