--- a/shows.html
+++ b/shows.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domov</title>
+    <title>Shows</title>
     <link rel="icon" type="image/x-icon" href="img/fav.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -44,13 +44,13 @@
     </header>
     <!-- header section start -->
     <!-- banner section start -->
-    <div class="home_banner">
+    <div class="shows_banner">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="banner_box">
-                        <h1>Tickets Macau</h1>
-                        <span>Macau’s Event Website</span>
+                        <h1>Shows</h1>
+                        <span>Macau’s Premier Shows</span>
                     </div>
                 </div>
             </div>
@@ -63,13 +63,14 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="para_hotel">
-                        <p>TicketsMacau is your premier source for discovering the latest and most exciting events in
-                            Macau. From thrilling casino tournaments and captivating theatrical performances to
-                            electrifying concerts, we provide a curated selection of events hosted in the city’s top
-                            casino
-                            hotels. Stay updated with the most current information and secure your tickets to experience
-                            the best of Macau’s entertainment scene. Let TicketsMacau guide you to unforgettable
-                            moments in Asia's entertainment capital.
+                        <p>Experience the magic of Macau’s entertainment scene with our curated selection of shows
+                            and performances. From mesmerizing theatrical productions and spectacular acrobatics to
+                            enchanting magic acts, Macau offers a diverse array of world-class entertainment. Whether
+                            you're captivated by awe-inspiring stage performances, thrilling circus acts, or the latest
+                            in
+                            musical innovation, our listings provide all the information you need to find and enjoy the
+                            most unforgettable shows in the city. Explore Macau’s live entertainment and secure your
+                            tickets to witness extraordinary talent and memorable experiences.
                         </p>
                     </div>
                 </div>
