--- a/shows.html
+++ b/shows.html
@@ -92,60 +92,17 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
                         <div class="together"> <a href="https://www.suomalainen.com/products/sinuhe-egyptilainen-2">
-                                <h3>Sinuhe egyptiläinen</h3>
-                                <span>✍️Mika Waltarin</span>
-                                <p>Hinta: <b>29,95 €</b></p>
+                                <h3>G.E.M. I AM GLORIA WORLD TOUR</h3>
+                                <span>Galaxy Macau</span>
+                                <p>2nd-11th August 2024</p>
                             </a>
-                            <p>Eeppinen historiallinen romaani egyptiläisestä lääkäristä.</p>
-                            <div class="view">
-                                <button class="toggle_btn">Katso lisää</button>
-                                <div class="content" style="display: none;">
-                                    <p>Tämä klassikko suomalainen romaani seuraa egyptiläisen lääkärin Sinuhen elämää
-                                        hänen
-                                        navigoiessaan muinaisen Egyptin monimutkaisissa paikoissa. Matkansa aikana
-                                        Sinuhe
-                                        kohtaa rakkauden, sodan ja poliittisen juonittelun tarjoten runsaasti
-                                        historiallisia ja
-                                        kulttuurisia yksityiskohtia.
-                                    </p>
-                                </div>
-                            </div>
+                            <p>G.E.M., the bestselling female artist in Greater China, has officially announced her new
+                                world tour concert, "I AM GLORIA."
+                            </p>
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.suomalainen.com/products/sinuhe-egyptilainen-2"
-                                class="button_main">Osta nyt</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12">
-                    <div class="thessa-inner">
-                        <div class="img_transition"><img src="image/tuntimaton.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.suomalainen.com/products/tuntematon-sotilas?queryId=a51c8b753d04b19cefe39cc066fa31f9&amp;objectId=48385628438863">
-                                <h3>Tuntematon sotilas
-
-                                </h3>
-                                <span> ✍️Väinö Linnan</span>
-                                <p>Hinta: <b>29,95 €</b></p>
-                            </a>
-                            <p>Voimakas kertomus suomalaisista sotilaista jatkosodan aikana.
-                            </p>
-                            <div class="view">
-                                <button class="toggle_btn">Katso lisää</button>
-                                <div class="content" style="display: none;">
-                                    <p>"Tuntematon sotilas" tarjoaa mukaansatempaavan ja realistisen kuvauksen
-                                        suomalaissotilaiden kokemuksista jatkosodassa Neuvostoliittoa vastaan. Romaani
-                                        keskittyy
-                                        joukkoon sotilaita korostaen heidän toveruuttaan, taistelujaan ja sodan julmaa
-                                        todellisuutta.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="hotel_btn">
-                            <a href="https://www.suomalainen.com/products/tuntematon-sotilas?queryId=a51c8b753d04b19cefe39cc066fa31f9&amp;objectId=48385628438863"
-                                class="button_main">Osta nyt</a>
+                                class="button_main">View More</a>
                         </div>
                     </div>
                 </div>
