--- a/shows.html
+++ b/shows.html
@@ -91,7 +91,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
-                        <div class="together"> <a href="https://www.suomalainen.com/products/sinuhe-egyptilainen-2">
+                        <div class="together"> <a href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/">
                                 <h3>G.E.M. I AM GLORIA WORLD TOUR</h3>
                                 <span>Galaxy Macau</span>
                                 <p>2nd-11th August 2024</p>
@@ -101,7 +101,7 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.suomalainen.com/products/sinuhe-egyptilainen-2"
+                            <a href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/"
                                 class="button_main">View More</a>
                         </div>
                     </div>
