--- a/shows.html
+++ b/shows.html
@@ -111,11 +111,9 @@
                         <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
                         <div class="together"> <a
                                 href="https://www.suomalainen.com/products/taalla-pohjantahden-alla-1-3">
-                                <h3>Täällä Pohjantähden alla
-                                </h3>
-                                <span>
-                                    ✍️Väinö Linnan</span>
-                                <p>Hinta: <b>27,95 €</b></p>
+                                <h3>René [Final Call] 2024 Live Tour-Macau</h3>
+                                <span>📍Galaxy Macau</span>
+                                <p>📅17th August 2024</p>
                             </a>
                             <p>Seikkailu Suomen historian ja yhteiskunnallisten muutosten läpi.
                             </p>
