--- a/shows.html
+++ b/shows.html
@@ -93,8 +93,8 @@
                         <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
                         <div class="together"> <a href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/">
                                 <h3>G.E.M. I AM GLORIA WORLD TOUR</h3>
-                                <span>Galaxy Macau</span>
-                                <p>2nd-11th August 2024</p>
+                                <span>📍Galaxy Macau</span>
+                                <p>📅2nd-11th August 2024</p>
                             </a>
                             <p>G.E.M., the bestselling female artist in Greater China, has officially announced her new
                                 world tour concert, "I AM GLORIA."
