--- a/shows.html
+++ b/shows.html
@@ -91,7 +91,8 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
-                        <div class="together"> <a href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/">
+                        <div class="together"> <a
+                                href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/">
                                 <h3>G.E.M. I AM GLORIA WORLD TOUR</h3>
                                 <span>📍Galaxy Macau</span>
                                 <p>📅2nd-11th August 2024</p>
@@ -115,26 +116,14 @@
                                 <span>📍Galaxy Macau</span>
                                 <p>📅17th August 2024</p>
                             </a>
-                            <p>Seikkailu Suomen historian ja yhteiskunnallisten muutosten läpi.
+                            <p>René Liu, the Diva of Arts, will extend her stunning 2023 Final Call World Tour into
+                                2024,
+                                introducing the Final Call World Tour with an all-encompassing stage experience.
                             </p>
-                            <div class="view">
-                                <button class="toggle_btn">Katso lisää</button>
-                                <div class="content" style="display: none;">
-                                    <p>Tämä useita vuosikymmeniä kattava romaani jäljittää Koskelan perheen elämää
-                                        pienessä
-                                        suomalaisessa kylässä. Se kattaa merkittäviä tapahtumia Suomen historiassa,
-                                        mukaan
-                                        lukien sisällissota, ja käsittelee yhteiskunnallisen muutoksen, luokkataistelun
-                                        ja ihmisen
-                                        kestävyyden teemoja.
-
-                                    </p>
-                                </div>
-                            </div>
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.suomalainen.com/products/taalla-pohjantahden-alla-1-3"
-                                class="button_main">Osta nyt</a>
+                                class="button_main">View More</a>
                         </div>
                     </div>
                 </div>
