--- a/shows.html
+++ b/shows.html
@@ -122,8 +122,8 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.suomalainen.com/products/taalla-pohjantahden-alla-1-3"
-                                class="button_main">View More</a>
+                            <a href="https://www.cityline.com/Events.html"
+                                class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
