--- a/shows.html
+++ b/shows.html
@@ -102,8 +102,8 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.galaxymacau.com/offers/entertainment/gem-i-am-gloria-world-tour-macau/"
-                                class="button_main">View More</a>
+                            <a href="https://www.cityline.com/Events.html"
+                                class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.suomalainen.com/products/taalla-pohjantahden-alla-1-3">
+                                href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/">
                                 <h3>René [Final Call] 2024 Live Tour-Macau</h3>
                                 <span>📍Galaxy Macau</span>
                                 <p>📅17th August 2024</p>
