--- a/shows.html
+++ b/shows.html
@@ -122,7 +122,7 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.cityline.com/Events.html"
+                            <a href="https://www.galaxymacau.com/offers/entertainment/rene-final-call-2024-live-tour-macau/"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
